--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,9 @@
               <a href="index.html" class="nav-menu-link link">Studio</a>
             </li>
             <li class="nav-menu-item">
-              <a href="portfolio.html" class="nav-menu-link curent link">Portfolio</a>
+              <a href="portfolio.html" class="nav-menu-link curent link"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-menu-item">
               <a href="#" class="nav-menu-link link">Contacts</a>
@@ -83,8 +85,8 @@
                   />
                   <p class="filter-text-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
                 <div class="filter-card_info">
@@ -104,8 +106,8 @@
                   />
                   <p class="filter-text-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
                 <div class="filter-card_info">
@@ -125,8 +127,8 @@
                   />
                   <p class="filter-text-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
                 <div class="filter-card_info">
@@ -146,8 +148,8 @@
                   />
                   <p class="filter-text-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
                 <div class="filter-card_info">
@@ -167,8 +169,8 @@
                   />
                   <p class="filter-text-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
                 <div class="filter-card_info">
@@ -188,8 +190,8 @@
                   />
                   <p class="filter-text-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
                 <div class="filter-card_info">
@@ -209,8 +211,8 @@
                   />
                   <p class="filter-text-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
                 <div class="filter-card_info">
@@ -230,8 +232,8 @@
                   />
                   <p class="filter-text-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
                 <div class="filter-card_info">
@@ -249,10 +251,10 @@
                     alt="Fresh Coffee"
                     width="360"
                   />
-                  <p class="filter-card-link ">
+                  <p class="filter-text-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
                 <div class="filter-card_info">
